// Database Design for Consumer Goods Manufacturer B2B Ordering & Loyalty System
// Matches the PostgreSQL production schema exactly

Table products {
  sku varchar(50) [pk, note: 'Unique SKU identifier for product']
  name varchar(255) [not null]
  unit_price numeric(12,2) [not null, note: 'Unit price in currency, must be >= 0']
  stock_quantity integer [not null, default: 0, note: 'On-hand warehouse stock']
  reserved_quantity integer [not null, default: 0, note: 'Stock currently reserved for placed/confirmed orders']
  created_at timestamptz [not null, default: `now()`]

  Note: 'Products in single central warehouse. Available stock = stock_quantity - reserved_quantity'
}

Table distributors {
  id varchar(50) [pk, note: 'Unique distributor account ID (e.g. D-101)']
  name varchar(255) [not null]
  credit_limit numeric(14,2) [not null, default: 0, note: 'Total approved revolving credit limit']
  loyalty_tier varchar(20) [not null, default: 'Bronze', note: 'Loyalty tier: Bronze (0%), Silver (3%), Gold (6%)']
  created_at timestamptz [not null, default: `now()`]

  Note: 'Distributor accounts participating in B2B credit terms and loyalty programme'
}

Table sales_managers {
  id integer [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  created_at timestamptz [not null, default: `now()`]

  Note: 'Sales managers reviewing pending orders and authorizing fulfillment'
}

Table orders {
  id varchar(50) [pk, note: 'Order reference number (e.g. ORD-2026-001)']
  distributor_id varchar(50) [not null]
  status varchar(30) [not null, note: 'Status enum: placed, pendingApproval, confirmed, dispatched, delivered, rejected, cancelled']
  subtotal numeric(14,2) [not null, default: 0]
  discount_rate numeric(5,4) [not null, default: 0, note: 'Fixed tier discount applied at placement time (R2)']
  discount_amount numeric(14,2) [not null, default: 0]
  total numeric(14,2) [not null, default: 0, note: 'Order total after discount']
  points_awarded integer [not null, default: 0, note: 'Points awarded upon reaching confirmed: floor(total / 100)']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Orders submitted by distributors and governed by State Diagram v2'
}

Table order_items {
  id integer [pk, increment]
  order_id varchar(50) [not null]
  sku varchar(50) [not null]
  quantity integer [not null, note: 'Quantity ordered (> 0)']
  unit_price numeric(12,2) [not null, note: 'Price per unit at order creation']
  line_total numeric(14,2) [not null, note: 'quantity * unit_price']
  created_at timestamptz [not null, default: `now()`]

  Note: 'Line items constituting each distributor order'
}

Table loyalty_points_ledger {
  id integer [pk, increment]
  distributor_id varchar(50) [not null]
  order_id varchar(50)
  points_delta integer [not null, note: 'Positive points awarded or negative points reversed']
  reason varchar(50) [not null, note: 'Reason: ORDER_CONFIRMED_AWARD, ORDER_CANCELLATION_POINTS_REVERSAL, etc.']
  created_at timestamptz [not null, default: `now()`]

  Note: 'Ledger tracking points history used for trailing 90 days tier calculation'
}

// Relationships
Ref: orders.distributor_id > distributors.id [delete: cascade]
Ref: order_items.order_id > orders.id [delete: cascade]
Ref: order_items.sku > products.sku [delete: restrict]
Ref: loyalty_points_ledger.distributor_id > distributors.id [delete: cascade]
Ref: loyalty_points_ledger.order_id > orders.id [delete: set null]
